remove readonly for euro and change js code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="currency">лв</span>
       </div>
       <div class= "input-group">
-        <input id="dueEUR" type="text" readonly placeholder="€">
+        <input id="dueEUR" type="text"  placeholder="€">
         <span class="currency">€</span>
       </div>
         
